[tool.poetry]
name = "repl_python3_100daysofcodepython-3"
version = "0.1.0"
description = ""
authors = ["AdamMelancon <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
